# qprimer_designer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.wdl  README.md  Snakefile  Snakefile.example  Snakefile.template  codecov.yml  environment.yml  params.txt  params.txt.template  pyproject.toml  setup.sh
docs/: gui_getting_started.md  output_interpretation_guide.md  qprimer_cli.md
gui/: app.py  fetch_virus_map_data.py  snakefile_builder.py  wdl_builder.py
scripts/: build_final_output.py  evaluate_custom.py  evaluate_primers.py  filter_primers.py  generate_primers.py  pick_representative_seqs.py  prepare_features.py  prepare_input.py  select_best_multiplex.py
src/: combined_regressor.pth
tests/: __init__.py  conftest.py  test_adapt_cli.py  test_build_output.py  test_cli.py  test_commands.py  test_encoding.py  test_evaluate_probe.py  test_export_report.py  test_external.py  test_filter_primers.py  test_generate_extended.py  test_generate_probe.py  test_models.py  test_models_inference.py  test_params.py  test_params_extended.py  test_parse_probe_mapping.py  test_probe.py  test_sequences.py  test_sequences_extended.py
training/: Classification_Optimization.ipynb  Classification_Optimization_Hybrid.ipynb  Regression_Optimization.ipynb  __init__.py  ablation_retrain_results.csv  ablation_study.py  adapt_pcr_external_tools.py  linear_probe.ipynb  retrain_ablations.py
workflows/: Snakefile.example  Snakefile.template  align_and_evaluate.wdl  align_probes.wdl  inputs.example.json  inputs.json.template  params.txt.template  process_target.wdl  tasks.wdl  (+1 more)
(+44 files in other folders)
