[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qprimer-designer"
version = "0.1.0"
description = "ML-guided PCR primer design with off-target minimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "biopython>=1.84",
    "pandas>=2.0",
    "numpy>=1.24",
    "torch>=2.0",
    "joblib>=1.3",
    "einops>=0.7",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[project.scripts]
qprimer = "qprimer_designer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qprimer_designer = ["data/*.pth", "data/*.joblib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
